app-code/kubeops/kubeops.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-ops-view
  namespace: monitoring
  labels:
    app: kube-ops-view
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-ops-view
  template:
    metadata:
      labels:
        app: kube-ops-view
    spec:
      serviceAccountName: kube-ops-view
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - olympus
            - weight: 75
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - avalon
            - weight: 50
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - phantom
            - weight: 25
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - atlantis
      containers:
        - name: kube-ops-view
          image: ghcr.io/thpham/kube-ops-view:latest
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: kube-ops-view-svc
  namespace: monitoring
  labels:
    app: kube-ops-view
spec:
  type: NodePort
  selector:
    app: kube-ops-view
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30881
