app-code/kubeops/kubeops-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubeops-ingress
  namespace: monitoring
spec:
  entryPoints: [web, websecure]
  routes:
    - match: Host(`kubeops.nexus.link`)
      kind: Rule
      middlewares: [{name: authentik-forwardauth, namespace: monitoring}]
      services: [{name: kube-ops-view-svc, port: 8080}]
